<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/callServiceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:text="@string/all_button"
            android:tag="all"
 />

        <Button
            android:id="@+id/filter_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:tag="3"
            android:text="@string/filter_3" />

        <Button
            android:id="@+id/filter_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:text="@string/filter_9"
            android:tag="9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter_12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:text="@string/filter_12"
            android:tag="12" />

        <Button
            android:id="@+id/filter_16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:text="@string/filter_16"
            android:tag="16" />

        <Button
            android:id="@+id/filter_18"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:nestedScrollingEnabled="true"
            android:onClick="callService"
            android:text="@string/filter_18"
            android:tag="18" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/SCROLLER_ID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:fillViewport="true">

    <TextView
        android:id="@+id/outputTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/callServiceButton"
        android:paddingTop="30dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/callServiceButton" />

    </ScrollView>


</LinearLayout>